reverted to java 11, added sorting, update force on